--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Engr_CDT_3ª As screen:
 
     Image3_25 As image:
         Height: =968
-        Image: ='Retífica_3ª_CDT'
+        Image: =Retífica_3ª_CDT
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
