--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_5%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Engr_CDZ_5ª As screen:
 
     Image3_29 As image:
         Height: =968
-        Image: ='Retífica_5ª_CDZ'
+        Image: =Retífica_5ª_CDZ
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
