--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_2%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Engr_2ª As screen:
 
     Image3_24 As image:
         Height: =968
-        Image: ='Retífica_Engr_2ª_1'
+        Image: =Retífica_Engr_2ª_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
