--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_5%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Engr_CDT_5ª As screen:
 
     Image3_30 As image:
         Height: =968
-        Image: ='Retífica_5ª_CDT'
+        Image: =Retífica_5ª_CDT
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
