--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_3%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Engr_CDZ_3ª As screen:
 
     Image3_26 As image:
         Height: =968
-        Image: ='Retífica_3ª_CDZ'
+        Image: =Retífica_3ª_CDZ
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
