--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa.fx.yaml
@@ -59,7 +59,7 @@ Retífica_Engr_1ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "3316037019");
             Set( varsetor ,  Label_setor_23.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -85,7 +85,7 @@ Retífica_Engr_1ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "3316037016");
             Set( varsetor ,  Label_setor_23.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -111,7 +111,7 @@ Retífica_Engr_1ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "3316037010");
             Set( varsetor ,  Label_setor_23.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -129,6 +129,7 @@ Retífica_Engr_1ª As screen:
     Btnmaq_212 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -147,6 +148,7 @@ Retífica_Engr_1ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF cadastrado"
         Width: =108
         X: =319
         Y: =569
@@ -163,7 +165,7 @@ Retífica_Engr_1ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "951500947");
             Set( varsetor ,  Label_setor_23.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -181,6 +183,7 @@ Retífica_Engr_1ª As screen:
     Btnmaq_214 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -199,6 +202,7 @@ Retífica_Engr_1ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF cadastrado"
         Width: =108
         X: =109
         Y: =770
