--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
@@ -59,7 +59,7 @@ Retífica_Engr_CDT_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "961502097");
             Set( varsetor ,  Label_setor_25.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -85,7 +85,7 @@ Retífica_Engr_CDT_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "95100940");
             Set( varsetor ,  Label_setor_25.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -103,6 +103,7 @@ Retífica_Engr_CDT_3ª As screen:
     Btnmaq_221 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =185
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -111,7 +112,7 @@ Retífica_Engr_CDT_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "951500949");
             Set( varsetor ,  Label_setor_25.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -121,6 +122,7 @@ Retífica_Engr_CDT_3ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF "
         Width: =155
         X: =476
         Y: =545
@@ -155,6 +157,7 @@ Retífica_Engr_CDT_3ª As screen:
     Btnmaq_223 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =185
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -173,6 +176,7 @@ Retífica_Engr_CDT_3ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF"
         Width: =155
         X: =160
         Y: =775
