--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_5%aa.fx.yaml
@@ -51,6 +51,7 @@ Retífica_Engr_CDZ_5ª As screen:
     Btnmaq_207 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =195
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -69,6 +70,7 @@ Retífica_Engr_CDZ_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF"
         Width: =155
         X: =476
         Y: =381
@@ -85,7 +87,7 @@ Retífica_Engr_CDZ_5ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "201405004576");
             Set( varsetor ,  Label_setor_29.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -111,7 +113,7 @@ Retífica_Engr_CDZ_5ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "71500031");
             Set( varsetor ,  Label_setor_29.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
