--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -153,6 +153,12 @@
     "Retífica_Engr_CDT_4ª",
     "Retífica_Engr_CDZ_4ª",
     "Retífica_Engr_CDT_5ª",
-    "Retífica_Engr_CDZ_5ª"
+    "Retífica_Engr_CDZ_5ª",
+    "Retífica_Luva_1ª2ª",
+    "Retífica_Luva_3ª4ª",
+    "Retífica_Luva_5ª",
+    "Retífica_Marcha_Ré",
+    "Retífica_Planetária",
+    "Retífica_Satélite"
   ]
 }
