--- a/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
@@ -53,7 +53,7 @@ Tela_Ini_2913 As screen:
             =Navigate(Retífica_Luva_3ª4ª);
             Set(vartela , "Retífica_Luva_3ª4ª");
         Size: =24
-        Text: ="Retifica Luva 3ª4ª"
+        Text: ="Retífica Luva 3ª4ª"
         Width: =Button2_24.Width
         X: =Button2_25.X
         Y: =Button2_26.Y
