--- a/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
@@ -51,6 +51,7 @@ Retífica_Planetária As screen:
     Btnmaq_237 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =190
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -69,36 +70,11 @@ Retífica_Planetária As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="CAF não cadastrado"
         Width: =200
         X: =18
         Y: =518
         ZIndex: =5
-
-    Btnmaq_238 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =203
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "961502075");
-            Set( varsetor ,  Label_setor_35.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =294
-        X: =334
-        Y: =666
-        ZIndex: =6
 
     Btnmaq_239 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -111,7 +87,7 @@ Retífica_Planetária As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502075");
+            =Set( varmaquina , "3316027025");
             Set( varsetor ,  Label_setor_35.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -137,7 +113,7 @@ Retífica_Planetária As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502075");
+            =Set( varmaquina , "3316027004");
             Set( varsetor ,  Label_setor_35.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -163,7 +139,7 @@ Retífica_Planetária As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502075");
+            =Set( varmaquina , "9315000293");
             Set( varsetor ,  Label_setor_35.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
