--- a/Levantamento de Perdas/Src/Ret%edfica_Sat%e9lite.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Sat%e9lite.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Satélite As screen:
 
     Image3_36 As image:
         Height: =968
-        Image: ='Retífica_Engr_Satélite'
+        Image: =Retífica_Engr_Satélite
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
