--- a/Levantamento de Perdas/Src/Ret%edfica_Luva_1%aa2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Luva_1%aa2%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Luva_1ª2ª As screen:
 
     Image3_31 As image:
         Height: =968
-        Image: ='Retífica_Luva_1ª_2ª'
+        Image: =Retífica_Luva_1ª_2ª
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
