--- a/Levantamento de Perdas/Src/Ret%edfica_Luva_3%aa4%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Luva_3%aa4%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Luva_3ª4ª As screen:
 
     Image3_32 As image:
         Height: =968
-        Image: ='Retífica_Luva_3ª_4ª'
+        Image: =Retífica_Luva_3ª_4ª
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
