--- a/Levantamento de Perdas/Src/Ret%edfica_Luva_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Luva_5%aa.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Luva_5ª As screen:
 
     Image3_33 As image:
         Height: =968
-        Image: ='Retífica_Luva_5ª_1'
+        Image: =Retífica_Luva_5ª_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
