--- a/Levantamento de Perdas/Src/Ret%edfica_Marcha_R%e9.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Marcha_R%e9.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Marcha_Ré As screen:
 
     Image3_34 As image:
         Height: =968
-        Image: ='Retífica_Marcha_Re'
+        Image: =Retífica_Marcha_Re
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
