--- a/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Planetária As screen:
 
     Image3_35 As image:
         Height: =968
-        Image: ='Retífica_Engr_Planetaria'
+        Image: =Retífica_Engr_Planetaria
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
