--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -159,6 +159,8 @@
     "Retífica_Luva_5ª",
     "Retífica_Marcha_Ré",
     "Retífica_Planetária",
-    "Retífica_Satélite"
+    "Retífica_Satélite",
+    "Luvas_2915",
+    "Engr_3ª_4ª_2915"
   ]
 }
