--- a/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
@@ -14,7 +14,7 @@ Tela_Ini_2915 As screen:
     Button2_41 As button:
         Height: =95
         Size: =24
-        Text: ="Usinagem Engr. 1ª"
+        Text: ="Luvas"
         Width: =280
         X: =24
         Y: =150
@@ -23,7 +23,7 @@ Tela_Ini_2915 As screen:
     Button2_42 As button:
         Height: =Button2_41.Height
         Size: =24
-        Text: ="Retífica Engr. 1ª"
+        Text: ="Engr. 3ª/4ª"
         Width: =Button2_41.Width
         X: =Button2_41.X+ Button2_41.Width + 25
         Y: =Button2_41.Y
@@ -32,7 +32,7 @@ Tela_Ini_2915 As screen:
     Button2_43 As button:
         Height: =Button2_41.Height
         Size: =24
-        Text: ="Usinagem Engr. 2ª"
+        Text: ="Eixos Primário e Secundário"
         Width: =Button2_41.Width
         X: =Button2_41.X
         Y: =Button2_41.Y + Button2_41.Height + 15
@@ -41,7 +41,7 @@ Tela_Ini_2915 As screen:
     Button2_44 As button:
         Height: =Button2_41.Height
         Size: =24
-        Text: ="Retífica Engr. 2ª"
+        Text: ="Vários"
         Width: =Button2_41.Width
         X: =Button2_42.X
         Y: =Button2_43.Y
@@ -62,121 +62,4 @@ Tela_Ini_2915 As screen:
         X: =560
         Y: =27
         ZIndex: =6
-
-    Button2_45 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDT 3ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_43.Y + Button2_43.Height + 15
-        ZIndex: =7
-
-    Button2_46 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDT 3ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_45.Y 
-        ZIndex: =8
-
-    Button2_47 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDZ 3ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_45.Y + Button2_45.Height + 15
-        ZIndex: =9
-
-    Button2_48 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDZ 3ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_47.Y 
-        ZIndex: =10
-
-    Button2_49 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDT 4ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_47.Y + Button2_47.Height + 15
-        ZIndex: =11
-
-    Button2_50 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDT 4ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_49.Y 
-        ZIndex: =12
-
-    Button2_51 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDZ 4ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_49.Y + Button2_49.Height + 15
-        ZIndex: =13
-
-    Button2_52 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDZ 4ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_51.Y 
-        ZIndex: =14
-
-    Button2_53 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDT 5ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_51.Y + Button2_51.Height + 15
-        ZIndex: =15
-
-    Button2_54 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDT 5ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_53.Y 
-        ZIndex: =16
-
-    Button2_55 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Engr. CDZ 5ª"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_53.Y + Button2_53.Height + 15
-        ZIndex: =17
-
-    Button2_56 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Retífica Engr. CDZ 5ª"
-        Width: =Button2_41.Width
-        X: =Button2_42.X
-        Y: =Button2_55.Y 
-        ZIndex: =18
-
-    Button2_57 As button:
-        Height: =Button2_41.Height
-        Size: =24
-        Text: ="Usinagem Coroinha"
-        Width: =Button2_41.Width
-        X: =Button2_41.X
-        Y: =Button2_55.Y + Button2_55.Height + 15
-        ZIndex: =19
 
